fix: UI: Improve scrollbar contrast on dark color schemes
rn=

(integrated from master branch change 066242b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.p.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.p.less
@@ -15,8 +15,8 @@
     @background-selected:   fade(desaturate(@special, 2%), 30%);
     
     @background-scrollbar:          @background;
-    @background-scrollbar-thumb:    lighten(@background, 5%);
-    @background-scrollbar-thumb-hover: lighten(@background, 10%);
+    @background-scrollbar-thumb:    lighten(@background, 10%);
+    @background-scrollbar-thumb-hover: lighten(@background, 15%);
     @background-scrollbar-hover:    darken(@background, 5%);
     
     @background-statusbar:      @background-primary;
